--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ a {
   justify-content: space-between;
   background-color: #81b3d2;
 }
+.main-reasons span /* доработать  отступ*/
 
 .reason-item {
   padding: 0 45px;
@@ -535,7 +536,7 @@ a {
 
 .copyright {
   display: flex;  
-  width: 200px;
+  width: 250px;
   margin: 0 100px 0 auto;
   align-items: center;
   justify-content: space-between;
@@ -566,397 +567,3 @@ a {
   fill: #bdbbbc;
 }
 
-.filters {
-  min-height: 217px;
-  box-sizing: border-box;  
-  padding: 27px 73px 0 73px;
-  font-size: 14px;
-  line-height: 21px;
-  color: #ffffff;  
-  background-image: url("../img/filter-background.png");
-  background-color: #81b3d2;
-  background-repeat: no-repeat;
-}
-
-.filter-hotels {
-  display: flex;
-  justify-content: space-between;
-}
-
-.filter-hotels fieldset {
-  padding: 0;
-  border: none;
-}
-
-.legend {
-  margin-bottom: 9px;
-  font-size: 16px;
-  line-height: 21px;
-  font-weight: bold;
-}
-
-.legend-checkbox {
-  margin-bottom: 25px;
-}
-
-.filter-infrastructure {
-  box-sizing: border-box;
-  width: 140px;
-  margin: 0 114px 0 0;
-}
-
-.fillter-hotel-type {
-  box-sizing: border-box;
-  width: 140px;
-  margin: 0 auto 0 0;
-}
-
-.filter-hotel-costs {
-  box-sizing: border-box;
-  width: 318px;
-  margin: 0;
-}
-
-.filter-checkbox {
-  position: relative;
-  display: block;
-  padding-left: 40px;
-  margin-bottom: 24px;
-  cursor: pointer;
-}
-
-.filter-checkbox input[type="checkbox"] + .checkbox-indicator {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 23px;
-  height: 23px;
-  background-image: url("../img/checkbox-off.svg");
-  background-repeat: no-repeat;
-}
-
-.filter-checkbox input[type="checkbox"]:checked + .checkbox-indicator {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 27px;
-  height: 23px;
-  background-image: url("../img/checkbox-on.svg");
-  background-repeat: no-repeat;  
-}
-
-.filter-checkbox input[type="checkbox"]:focus + .checkbox-indicator {
-  outline: thin dotted;
-  outline: 5px auto -webkit-focus-ring-color;
-}
-
-.filter-checkbox input[type="checkbox"]:disabled + .checkbox-indicator {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 23px;
-  height: 23px;
-  background-image: url("../img/checkbox-off.svg");
-  background-repeat: no-repeat;  
-  opacity: 0.4;
-}
-
-.priсe-controls {
-  position: relative;
-  box-sizing: border-box;
-  height: 36px;
-  margin-bottom: 20px;
-  font-size: 0;
-  border: 2px solid #ffffff;
-  border-radius: 2px;
-}
-
-.priсe-controls:after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 2px;
-  height: 22px;
-  background-color: #ffffff;
-  transform: translate(-50%, -50%);
-}
-
-.priсe-controls label {
-  width: 90px;
-  padding-left: 65px;
-  display: inline-block;
-  font-size: 14px;
-  line-height: 32px;
-  vertical-align: top;
-  cursor: pointer;
-}
-
-.priсe-controls .price-max {
-  padding-left: 58px;
-}
-
-.priсe-controls input {
-  width: 50px;
-  margin: 0;
-  font: inherit;
-  color: inherit;  
-  background: none;
-  border: none;
-  outline: none;
-}
-
-.range-controls {
-  position: relative;
-  margin-bottom: 32px;
-}
-
-.range-controls .scale {
-  height: 2px;
-  background-color: rgba(255, 255, 255, 0.3)
-}
-
-.range-controls .bar {
-  width: 80%;
-  height: 2px;
-  background-color: #ffffff;
-}
-
-.range-toggle {
-  position: absolute;
-  top: -9px;
-  width: 4px;
-  height: 4px;
-  background-color: #ababab;
-  border: 8px solid #ffffff;
-  border-radius: 50%;
-  box-shadow: 0 2px 1px 0 rgba(0, 1, 1, 0.2);
-  cursor: pointer;  
-}
-
-.range-toggle:hover,
-.range-toggle:focus {
-  background-color: #1c4f80;
-  border: 9px solid #ffffff;
-}
-
-.range-toggle-min {
-  left: 0;
-}
-
-.range-toggle-max {
-  left: 80%;
-}
-
-.filter-hotels button {
-  display: block;
-  box-sizing: border-box;
-  min-height: 38px;
-  margin: 0 0 0 86px;
-  padding: 6px 34px;
-  background-color: transparent;
-  font: inherit;
-  border: 2px solid  #ffffff;
-  border-radius: 2px;
-  outline: none;
-  cursor: pointer;
-}
-
-.filter-hotels button:hover,
-.filter-hotels button:focus {
-  color: #000000;
-  background-color: #ffffff;
-}
-
-.selection-results {
-  display: flex;  
-  box-sizing: border-box;    
-  min-height: 86px;
-  padding: 0 73px 30px 73px; 
-  justify-content: space-between;  
-  align-items: flex-end;
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.selection-results p:first-of-type {
-  margin: 0 47px 0 0;
-  font-size: 21px;
-  line-height: 26px;
-  font-weight: bold;
-  color: #000000;
-}
-
-.selection-results p {
-  margin: 0 38px 0 0;
-  font-size: 12px;
-  line-height: 18px;
-  color: #000000;
-}
-
-.selection-result-type-list {
-  margin: 0 auto 0 0;
-  padding: 0;
-  list-style: none;
-}
-
-.selection-result-type-item {
-  display: inline;
-  margin-right: 30px;
-}
-
-.selection-result-current {
-  font-size: 12px;
-  line-height: 18px;
-  color: #81b3d2;
-}
-
-.selection-result-type-item a {
-  font-size: 12px;
-  line-height: 18px;
-  color: rgba(0, 0, 0, 0.3);
-  border-bottom: 1px dotted #81b3d2;
-}
-
-.selection-result-type-item a:hover,
-.selection-result-type-item a:focus {
-  color: #81b3d2;
-  border-bottom: 1px dotted #81b3d2;
-}
-
-.selection-result-type-item a:active {
-  color: #000000;
-  border-bottom: none;
-}
-
-.icon {
-  fill: rgba(0, 0, 0, 0.3);
-}
-
-.selection-result-ranging a {
-  display: inline-block;
-  width: 11px;
-  height: 10px;
-  margin-left: 7px;
-}
-
-.selection-result-ranging-current .icon {
-  fill: #81b3d2;
-}
-
-.selection-result-ranging a:focus .icon,
-.selection-result-ranging a:hover .icon {
-	fill: #000000;
-}
-
-.selection-result-ranging a:active .icon {
-	fill: #81b3d2;
-}
-
-.results-list{
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.results-item {
-  display: flex;
-  min-height: 90px;
-  padding: 30px 73px 30px 73px;  
-  justify-content: space-between;
-  align-items: stretch;
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.about-hotel {
-  width: 270px;
-  margin: 0 auto 0 30px;
-}
-
-.hotel-name {
-  margin: -6px 0 11px 0;
-}
-
-.results-list a {
-  font-size: 21px;
-  line-height: 26px;
-  font-weight: bold;
-  color: #000000;
-}
-
-.results-list a:hover,
-.results-list a:focus {
-  color: #81b3d2;
-}
-
-.results-list a:active {
-  color: rgba(0, 0, 0, 0.3);
-}
-
-.reservation-button,
-.more-button {
-  font-size: 14px;
-  line-height: 21px;
-}
-
-.hotel-type {
-  display: inline-block;
-  width: 110px;
-  margin: 0 3px 11px 0;
-}
-
-.hotel-costs {
-  display: inline-block;
-  width: 142px;
-  margin-bottom: 11px;
-}
-
-.more-button {
-  width: 110px;
-  height: 27px;
-  margin-right: 3px;
-}
-
-.reservation-button {
-  width: 142px;
-  height: 27px;
-}
-
-.rating {
-  display: flex;  
-  margin: 0;
-  padding: 0;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.star {
-  margin: 0;
-  background-image: url("../img/star.svg");
-  background-repeat: space;
-  background-color: #ffffff; 
-}
-
-.rating-value {
-  box-sizing: border-box;
-  width: 110px;
-  height: 28px;
-  margin: 45px 0 0 0;
-  padding: 3px 0 3px 16px;
-  color: #666666;
-  background-color: #f2f2f2;
-}
-
-.four-star {
-  width: 89px;
-  height: 17px;
-}
-
-.three-star {
-  width: 65px;
-  height: 17px;
-}
-
-.two-star {
-  width: 41px;
-  height: 17px;
-}
