--- a/css/style.css
+++ b/css/style.css
@@ -260,248 +260,264 @@ a {
 }
 
 .hotel-search {
-    position: relative;
-    text-align: center;
+  position: relative;
+  text-align: center;
 }
 
 .hotel-search p {
-    margin: 25px 0 0 0;
-    font-size: 14px;
-    line-height: 24px;
+  margin: 25px 0 0 0;
+  font-size: 14px;
+  line-height: 24px;
 }
 
 .hotel-search b {
-    font-size: 30px;
-    line-height: 36px;
-    font-weight: bold;
+  font-size: 30px;
+  line-height: 36px;
+  font-weight: bold;
 }
 
-.button {
-    font-family: "PT Sans", Arial, sans-serif;
-    font-size: 21px;
-    line-height: 26px;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-align: center;
-    vertical-align: middle;
-    color: #ffffff;
-    border: none;
+.button {  
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: bold;
+  text-transform: uppercase;  
+  text-align: center;
+  vertical-align: middle;
+  color: #ffffff;  
+  border: none;
 }
 
 .hotel-search-button {
-    box-sizing: border-box;
-    width: 568px;
-    height: 86px;
-    margin-top: 47px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 568px;
+  height: 86px;
+  margin-top: 47px;
 }
 
 .hotel-search-button,
 .reservation-button {
-    background-color: #766357;
-}
+  background-color: #766357; 
+ }
 
 .hotel-search-button:hover,
 .hotel-search-button:focus,
 .reservation-button:hover,
 .reservation-button:focus {
-    background-color: #604e43;
+  background-color: #604e43;
 }
 
 .hotel-search-button:active,
 .reservation-button:active {
-    background-color: #503e33;
-    color: rgba(255, 255, 255, 0.3);
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #503e33;  
 }
 
 .search-form {
-    position: absolute;
-    bottom: -396px;
-    left: 316px;
-    min-height: 396px;
-    width: 568px;
-    box-sizing: border-box;
-    padding: 55px;
-    background-color: #ffffff;
-    box-shadow: 0 7px 15px 0 rgba(0, 1, 1, 0.15);
+  position: absolute;
+  bottom: -396px;
+  left: 316px;
+  z-index: 2;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  min-height: 396px;
+  width: 568px;  
+  padding: 55px;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 7px 15px 0 rgba(0, 1, 1, 0.15);
+          box-shadow: 0 7px 15px 0 rgba(0, 1, 1, 0.15);  
+}
+
+.search-form-show {
+  display: none;
 }
 
 .form-hotel-search {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    font-size: 14px;
-    line-height: 26px;
-    font-weight: bold;
-    color: #000000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-size: 14px;
+  line-height: 26px;
+  font-weight: bold;
+  color: #000000;
 }
 
 .form-hotel-search-item {
-    position: relative;
-    display: flex;
-    margin-bottom: 29px;
-    justify-content: space-between;
-    width: 458px;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 29px;
 }
 
 .half-line {
-    width: 226px;
-    margin-bottom: 54px;
+  margin-bottom: 54px;
 }
 
 .half-line:last-of-type label {
-    padding-left: 52px;
+  padding-left: 48px;
 }
 
 .form-hotel-search label {
-    display: block;
-    box-sizing: border-box;
-    width: 100px;
-    height: 38px;
-    padding: 6px 0;
-    text-align: left;
+  display: block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 112px;
+  height: 38px;
+  padding: 6px 0;
+  text-align: left;
 }
 
 .icon-button {
-    width: 40px;
-    height: 38px;
-    padding: 0;
-    margin: 0;
-    background-color: #f2f2f2;
-    border: none;
+  width: 40px;
+  height: 38px;
+  margin: 0;  
+  padding: 0;  
+  background-color: #f2f2f2;
+  border: none; 
 }
 
 .calendar {
-    display: flex;
-    position: absolute;
-    top: 0;
-    right: 0;
-    justify-content: center;
-    align-items: center;
-    fill: #cacaca;
+  position: absolute;
+  top: 0;
+  left: 420px;  
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  fill: #cacaca;
+  background-color: transparent;
 }
 
 .calendar:hover,
 .calendar:focus {
-    fill: #000000;
+  fill: #000000;
 }
 
 .calendar:active {
-    fill: #81b3d2;
+  fill: #81b3d2;
 }
 
 .minus {
-    position: absolute;
-    top: 0;
-    right: 74px;
-}
-
-.minus:after {
-    content: "";
-    position: absolute;
-    top: 18px;
-    left: 14px;
-    width: 12px;
-    height: 3px;
-    background-image: url("../img/plus-minus.png");
-    background-repeat: no-repeat;
-    background-position: 0 -4px;
+  position: absolute;
+  top: 0;
+  right: 74px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 0;
+  fill: #a9a9a9;
 }
 
 .plus {
-    position: absolute;
-    top: 0;
-    right: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 0;
+  fill: #a9a9a9;
 }
 
-.plus:after {
-    content: "";
-    position: absolute;
-    top: 14px;
-    right: 14px;
-    width: 11px;
-    height: 11px;
-    background-image: url("../img/plus-minus.png");
-    background-repeat: no-repeat;
-    background-position: -19px 0;
+.minus:hover path,
+.minus:focus path,
+.plus:hover path,
+.plus:focus path {
+  fill: #000000;
 }
 
-.minus:hover:after,
-.minus:focus:after {
-    background-position: -37px -4px;
-}
-
-.minus:active:after {
-    background-position: -74px -4px;
-}
-
-.plus:hover:after,
-.plus:focus:after {
-    background-position: -56px 0;
-}
-
-.plus:active:after {
-    background-position: -93px 0;
+.minus:active path,
+.plus:active path {
+  fill: #81b3d2;
 }
 
 .input-date {
-    display: block;
-    box-sizing: border-box;
-    width: 306px;
-    height: 38px;
-    padding-left: 10px;
-    margin-right: 40px;
+  display: block;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 346px;
+  height: 38px;
+  padding: 0 40px 0 10px;
 }
 
 .input-number {
-    width: 34px;
-    height: 38px;
-    padding-left: 10px;
-    margin: 0 40px;
-    box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;  
+  width: 34px;
+  height: 38px;
+  margin: 0 40px;  
+  padding-left: 10px;
 }
 
 .form-hotel-search-button {
-    width: 460px;
-    height: 60px;
+  width: 460px;
+  height: 60px;
 }
 
 .form-hotel-search-button,
 .more-button {
-    background-color: #81b3d2;
+  background-color: #81b3d2; 
 }
 
 .form-hotel-search-button:hover,
 .form-hotel-search-button:focus,
 .more-button:hover,
 .more-button:focus {
-    background-color: #669ec0;
+  background-color: #669ec0;
 }
 
 .form-hotel-search-button:active,
 .more-button:active {
-    background-color: #5496bd;
-    color: rgba(255, 255, 255, 0.3);
+  color: rgba(255, 255, 255, 0.3);  
+  background-color: #5496bd;
 }
 
 .form-hotel-search input {
-    font-size: 14px;
-    line-height: 26px;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: #000000;
-    background-color: #f2f2f2;
-    border: 2px solid transparent;
+  font-size: 14px;
+  line-height: 26px;
+  font-weight: bold;
+  text-transform: uppercase;  
+  color: #000000;
+  background-color: #f2f2f2;
+  border: 2px solid  transparent;
 }
 
 .form-hotel-search input:hover {
-    background-color: #ebebed;
+  background-color: #ebebed;
 }
 
 .form-hotel-search input:focus {
-    background-color: #ffffff;
-    border: 2px solid #e5e5e5;
-    outline: none;
-}
+  background-color: #ffffff;
+  border: 2px solid  #e5e5e5;
+  outline: none;
+} 
 
 .map {
     line-height: 0;
@@ -567,7 +583,7 @@ a {
 
 .copyright {
     display: flex;
-    width: 200px;
+    width: 220px;
     margin: 0 100px 0 auto;
     align-items: center;
     justify-content: space-between;
